--- a/static/sass/main.scss
+++ b/static/sass/main.scss
@@ -1,15 +1,13 @@
-@import "variables";
 @import 'base';
-@import 'typography';
 
 @import 'gallery';
 
 @import 'components';
 @import 'header';
 @import 'home';
-@import 'section-content';
+
 @import 'abstract';
 @import 'footer';
 
-@import 'navigation'
+@import 'navigation';
 
