--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15,13 +15,15 @@
 }
 
 .heading-primary-text {
-  font-size: 2rem;
-  font-weight: bold;
+  font-size: 2.2rem;
+  font-weight: 300;
+  padding: 3rem 0 3rem 0;
 }
 
 .heading-secondary-text {
   font-size: 1.8rem;
-  font-weight: bold;
+  font-weight: 400;
+  padding: 2rem 0 2rem 0;
 }
 
 *,
@@ -266,10 +268,6 @@ body {
   grid-row: 3/4;
   grid-column: 1/-1;
   background-color: white;
-}
-
-.section-content {
-  text-align: right;
 }
 
 @keyframes slide_animation {
