--- a/store/templates/home.html
+++ b/store/templates/home.html
@@ -33,7 +33,7 @@
 
 
 <section class="section-new-products">
-    <h1>New products</h1>
+    <h1 class="heading-primary-text">New products</h1>
     <div class="nw-product">
         <div class="nw-product__container">                                   
             <img class="nw-product__photo" src="{% static 'img/nw-item-1.jpg' %}" alt="">
@@ -72,7 +72,7 @@
 
 
 <section class="gallery-section">
-    <h2>Trending</h2>
+    <h2 class="heading-secondary-text">Trending</h2>
     <div class="gallery">
         <figure class="gallery__item gallery__item--1">
             <img src="{% static 'img/galle-1.jpg' %}" alt="Gallery 1" class="gallery__img">
