--- a/store/templates/main.html
+++ b/store/templates/main.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <div id="container" class="page-container">
-        <div id="navigationNav" class="navigation">
-            <nav id="navContent" class="menu-content">
+        <div id="navigationNav" class="navigation-wrapper">
+            <nav id="navContent" class="navigation">
                 <ul class="navigation__list">
                     <li class="navigation__item"><a href="#" class="navigation__link">New arrivals</a></li>
                     <li class="navigation__item"><a href="#" class="navigation__link">Women</a></li>
