--- a/static/sass/_components.scss
+++ b/static/sass/_components.scss
@@ -136,3 +136,14 @@
     }
 }
 
+.icon{
+    width: 3rem;
+    height: 100%;
+    fill: white;
+}
+
+.icon-search{
+    display: block;
+    height: 20px;
+}
+
