--- a/static/sass/_base.scss
+++ b/static/sass/_base.scss
@@ -31,12 +31,46 @@ body{
 
 
 .page-container{
+    min-width: 375px;
     margin: 0 auto;
     display: grid;
-    grid-template-rows: 12rem min-content repeat(2, min-content);
+    grid-template-rows: 12rem repeat(2, min-content);
     grid-template-columns: 1fr repeat(8, minmax(min-content, 14rem)) 1fr;
     background-image: linear-gradient();
     overflow-x: hidden;
+    
+}
+
+#addCartAmount{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 5000;
+}
+
+.search-form-wrapper{
+    position: fixed;
+    width: 100%;
+    height: 0;
+    z-index: 5005;
+    top: 0;
+    left: 0;
+    overflow-x: hidden;
+    transition: all .4s;
+    background-color: blueviolet;
+}
+
+.search-form{
+    background-color: var(--primary-color-light-1);
+    position: relative;
+    width: 100%;
+    height: 40vh;
+    top: 0;
+    left: 0;
+    overflow: hidden;
+    padding-top: 6rem;
+    transition: height .4s cubic-bezier(.92,-0.72,.55,1.69);
 }
 
 
