--- a/static/sass/_header.scss
+++ b/static/sass/_header.scss
@@ -6,6 +6,7 @@
     align-content: center;
     align-items: center;
     justify-items: center;
+    column-gap: 2rem;
 
 
     &__logo{
@@ -18,26 +19,39 @@
 }
 
 
-
-.menu{
-
-    &__icon{
-        fill: white;
-    }
-    
-}
 .search{
-    grid-column: 5 / 6;
-}
-
-.user-nav{
     grid-column: 4 / 5;
-    grid-row: 1 / 1;
 }
 
-.icon{
-    width: 3rem;
-    height: 3rem;
-    fill: white;
-    
+.user-nav{    
+    grid-column: 5 / 6;
+    grid-row: 1 / 1;
+    display: grid;
+    grid-template-columns: repeat(2, min-content);
+    justify-items: center;
+    column-gap: 2rem;
+
+    &__cart{
+        display: grid;
+        grid-template-rows: min-content;
+        grid-template-columns: min-content;
+        text-decoration: none;
+        color: white;
+    }
+
+    &__cart-amount{
+        display: block;
+        align-self: center;
+        justify-self: center;
+    }
+
 }
+
+.user-nav__cart-amount,
+.user-nav__cart-icon{
+    grid-column: 1 / 2;
+    grid-row: 1/2;
+}
+
+
+
