--- a/static/css/style.css
+++ b/static/css/style.css
@@ -375,6 +375,64 @@ body {
   width: 70%;
 }
 
+.catalog {
+  width: 100vw;
+  display: grid;
+  grid-template-columns: repeat(2, min-content);
+  column-gap: 0.4rem;
+}
+
+.catalog__product {
+  margin-bottom: 2rem;
+  width: 50vw;
+  display: grid;
+  margin: 1rem auto;
+  grid-template-rows: 20rem repeat(3, min-content);
+  row-gap: 1rem;
+  overflow: hidden;
+  /*border: lightslategray solid .1rem;*/
+}
+
+.catalog__photo {
+  grid-row: 1/1;
+  grid-column: 1/1;
+  padding: 0.5rem;
+}
+
+.catalog__img {
+  width: 100%;
+  height: 100%;
+}
+
+.catalog__new-tag {
+  grid-row: 1/1;
+  grid-column: 1/1;
+  background: var(--primary-color);
+  display: block;
+  align-self: flex-end;
+  height: min-content;
+  margin-left: 0.5rem;
+  margin-bottom: 0.5rem;
+  width: min-content;
+  color: white;
+}
+
+.catalog__detail {
+  padding: 0 0.5rem 0 0.5rem;
+}
+
+.detail__list {
+  list-style: none;
+}
+
+.btn--shop {
+  padding: 1rem;
+  background: var(--primary-color);
+  color: white;
+  outline: none;
+  border: none;
+}
+
 .navigation-wrapper {
   position: fixed;
   width: 0;
