--- a/static/sass/_variables.scss
+++ b/static/sass/_variables.scss
@@ -11,6 +11,9 @@
     --bk-light-color: #fff;
 
     --color-text: #2D2D2D;
+    --color-text-light-black-1: #393939;
+    --color-text-light-black-2: #737373;
+
 
     --light-gray-1: #F9F7F6;
     --light-gray-2: #AAA;
@@ -24,6 +27,7 @@
     // FONT
 
     --font-primary: 'Nunito';
+    --font-secondary: 'Quicksand';
     --font-display: 'Josefin Sans', sans-serif;
 
 }
