--- a/static/sass/_base.scss
+++ b/static/sass/_base.scss
@@ -14,14 +14,15 @@
 }
 
 html{
-    font-family: 'Nunito', sans-serif;
+    font-family: 'Quicksand', sans-serif;
+    //font-family: 'Nunito', sans-serif;
     box-sizing: border-box;
     font-size: 62.5%; // 10 / 16 = 62.5% -> 1rem = 10px
     font-weight: 300; 
 }
 
 body{
-    font-family: var(--font-primary);
+    font-family: var(--font-secondary);
     color: var(--gray-dark-2);
     font-weight: 300;
     line-height: 1.6;
@@ -75,5 +76,44 @@ body{
 
 
 
+ /* Style the list */
+ ul.breadcrumb {
+    padding: 10px 16px;
+    list-style: none;
+    background-color: #eee;
+  }
+  
+/*
+
+    breadcrumb navigation provide links back to each
+    previous page the user navigated through, and shows 
+    the user's current location in a website.
+
+*/
 
 
+  /* Display list items side by side */
+  ul.breadcrumb li {
+    display: inline;
+    font-size: 18px;
+    color: var(--color-text-light-black-2);
+  }
+  
+  /* Add a slash symbol (/) before/behind each list item */
+  ul.breadcrumb li+li:before {
+    padding: 8px;
+    color: var(--color-text-light-black-1);
+    content: "/\00a0";
+  }
+  
+  /* Add a color to all links inside the list */
+  ul.breadcrumb li a {
+    color: var(--color-text-light-black-1);
+    text-decoration: none;
+  }
+  
+  /* Add a color on mouse-over */
+  ul.breadcrumb li a:hover {
+    color: #01447e;
+    text-decoration: underline;
+  } 
