cambios del modelo

--- a/templates/crud-product.html
+++ b/templates/crud-product.html
@@ -8,7 +8,7 @@
 <div class="container">
     <!-- OPEN MODAL CREATE -->
     <div class="row">
-        <button class="btn btn-success btn-block" type="button">New Product</button>
+        <button onclick="open_modal_create('{% url 'create' %}')" class="btn btn-success btn-block" type="button">New Product</button>
     </div>
     <div class="row">
         <div class="col-sm">
